changed the background for the signup page and matched it with login page and made the style of login page same as signup page fixing alignments and making the page consitant

--- a/app/static/login.css
+++ b/app/static/login.css
@@ -4,6 +4,11 @@
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
 }
+body{
+    background-image: url(defaultbg.jpg);
+    background-size: cover; /* This property ensures that the image covers the entire background */
+    background-repeat: no-repeat; /* This property prevents the image from repeating */ 
+}
 main {
     height: 100;
     width: 100vw;
@@ -20,33 +25,33 @@ main {
     justify-content: center;
     padding: 0;
     background-color:  #f0f2f5;
+    border-radius: 20px;
+    margin: auto;
+    margin-top: 20px;
 }
+
 .logintitle{
-    
-    right: 100%;
+    align-items: center;
 }
 .loginPage {
     margin: 0 50px;
     width: 520px;
-    margin-top: 300px;
+    margin-bottom: 20px;
     align-items: center;
 }
 
 .loginForm {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: last baseline;
     padding: 40px;
+
      
 }
-.login-image img{
-    max-width: 300%;
-    max-height: 300%;
-    display: block;
-    margin-left: 300px;
-}
+
 .loginPage h2{
-    margin: auto;
+    text-align: center;
+    margin-top: 20px;
 
 }
  #logintitle{
@@ -70,10 +75,10 @@ input {
     padding: 20px 45px 20px 20px
 }
 .input {
-    width: 200%;
-    height: 7vh;
+    width: 100%;
+    height: 2vh;
     margin: 30px;
-    margin-bottom: 40px;
+    margin-bottom: 60px;
 }
 
 .button {
@@ -109,4 +114,4 @@ input {
     background-color: blue;
     color: white;
 }
-
+ */
