--- a/app/static/signup.css
+++ b/app/static/signup.css
@@ -5,7 +5,7 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 body{
-    background-image: url(v.jpg);
+    background-image: url(defaultbg.jpg);
     background-size: cover; /* This property ensures that the image covers the entire background */
     background-repeat: no-repeat; /* This property prevents the image from repeating */ 
 }
@@ -27,7 +27,6 @@ main {
     justify-content: center;
     padding: 0;
     background-color:  #f0f2f5;
-    margin-top: 100px;
     border-radius: 20px;
     
 }
@@ -43,7 +42,7 @@ main {
 .loginPage {
     margin: 0 50px;
     width: 520px;
-    margin-bottom: 0px;
+    margin-bottom: 20px;
     align-items: center;
 }
 
@@ -57,6 +56,7 @@ main {
 
 .loginPage h2{
     margin: 0;
+    margin-top: 20px;
     width: 100%;
     
 }
@@ -97,7 +97,7 @@ input {
     background-color:white;
     color: black;
     font-size: 17px;
-    margin-top: 20px;
+    margin-top: 50px;
 }
 
 .button:hover {
